--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "bin/run.js",
   "scripts": {
     "start": "nodemon | ./node_modules/.bin/bunyan",
-    "test": "NODE_ENV=test eslint bin server && nyc mocha --recursive test"
+    "test": "NODE_ENV=test snyk test && eslint bin server && nyc mocha --recursive test --exit"
   },
   "engines": {
     "node": "8.12.0"
@@ -28,6 +28,7 @@
     "mocha": "^5.2.0",
     "nyc": "^13.0.1",
     "should": "^13.2.3",
+    "snyk": "^1.96.0",
     "supertest": "^3.3.0"
   }
 }
